use javaee maven parent pom